// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler v-bind > .attr modifier 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "foo-bar", () => _ctx.id)
  return n0
}"
`;

exports[`compiler v-bind > .attr modifier w/ innerHTML 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "innerHTML", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .attr modifier w/ no expression 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "foo-bar", () => _ctx.fooBar)
  return n0
}"
`;

exports[`compiler v-bind > .attr modifier w/ progress value 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<progress>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "value", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .attr modifier w/ textContent 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "textContent", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .attr modifier w/ value 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "value", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .camel modifier 1`] = `
"import { setPropBinding as _setPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setPropBinding(n0, "fooBar", () => _ctx.id)
  return n0
}"
`;

exports[`compiler v-bind > .camel modifier w/ dynamic arg + prefixIdentifiers 1`] = `
"import { camelize as _camelize, setDynamicPropsBinding as _setDynamicPropsBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDynamicPropsBinding(n0, () => [{ [_camelize(_ctx.foo(_ctx.bar) || "")]: _ctx.id }])
  return n0
}"
`;

exports[`compiler v-bind > .camel modifier w/ dynamic arg 1`] = `
"import { camelize as _camelize, setDynamicPropsBinding as _setDynamicPropsBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDynamicPropsBinding(n0, () => [{ [_camelize(_ctx.foo || "")]: _ctx.id }])
  return n0
}"
`;

exports[`compiler v-bind > .camel modifier w/ no expression 1`] = `
"import { setPropBinding as _setPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setPropBinding(n0, "fooBar", () => _ctx.fooBar)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier (shorthand) 1`] = `
"import { setDOMPropBinding as _setDOMPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDOMPropBinding(n0, "fooBar", () => _ctx.id)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier (shorthand) w/ innerHTML 1`] = `
"import { setHtmlBinding as _setHtmlBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtmlBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier (shorthand) w/ no expression 1`] = `
"import { setDOMPropBinding as _setDOMPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDOMPropBinding(n0, "fooBar", () => _ctx.fooBar)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier (shorthand) w/ progress value 1`] = `
"import { setDOMPropBinding as _setDOMPropBinding, template as _template } from 'vue';
const t0 = _template("<progress>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDOMPropBinding(n0, "value", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier (shorthand) w/ textContent 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setText(n0, _ctx.foo))
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier (shorthand) w/ value 1`] = `
"import { setValueBinding as _setValueBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setValueBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier 1`] = `
"import { setDOMPropBinding as _setDOMPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDOMPropBinding(n0, "fooBar", () => _ctx.id)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ dynamic arg + prefixIdentifiers 1`] = `
"import { setDynamicPropsBinding as _setDynamicPropsBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDynamicPropsBinding(n0, () => [{ ["." + _ctx.foo(_ctx.bar)]: _ctx.id }])
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ dynamic arg 1`] = `
"import { setDynamicPropsBinding as _setDynamicPropsBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDynamicPropsBinding(n0, () => [{ ["." + _ctx.fooBar]: _ctx.id }])
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ innerHTML 1`] = `
"import { setHtmlBinding as _setHtmlBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtmlBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ no expression 1`] = `
"import { setDOMPropBinding as _setDOMPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDOMPropBinding(n0, "fooBar", () => _ctx.fooBar)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ progress value 1`] = `
"import { setDOMPropBinding as _setDOMPropBinding, template as _template } from 'vue';
const t0 = _template("<progress>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDOMPropBinding(n0, "value", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ textContent 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setText(n0, _ctx.foo))
  return n0
}"
`;

exports[`compiler v-bind > .prop modifier w/ value 1`] = `
"import { setValueBinding as _setValueBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setValueBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > :class w/ svg elements 1`] = `
"import { setClassBinding as _setClassBinding, template as _template } from 'vue';
const t0 = _template("<svg>", 1, 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassBinding(n0, () => _ctx.cls, true)
  return n0
}"
`;

exports[`compiler v-bind > :innerHTML 1`] = `
"import { setHtmlBinding as _setHtmlBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtmlBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > :style w/ svg elements 1`] = `
"import { setStyleBinding as _setStyleBinding, template as _template } from 'vue';
const t0 = _template("<svg>", 1, 1)

export function render(_ctx) {
  const n0 = t0()
  _setStyleBinding(n0, () => _ctx.style)
  return n0
}"
`;

exports[`compiler v-bind > :textContext 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setText(n0, _ctx.foo))
  return n0
}"
`;

exports[`compiler v-bind > :value 1`] = `
"import { setValueBinding as _setValueBinding, template as _template } from 'vue';
const t0 = _template("<input>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setValueBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > :value w/ progress 1`] = `
"import { setPropBinding as _setPropBinding, template as _template } from 'vue';
const t0 = _template("<progress>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setPropBinding(n0, "value", () => _ctx.foo)
  return n0
}"
`;

exports[`compiler v-bind > array class falls back to setClass 1`] = `
"import { setClassBinding as _setClassBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassBinding(n0, () => [_ctx.foo, { danger: _ctx.active }])
  return n0
}"
`;

exports[`compiler v-bind > attributes must be set as attribute 1`] = `
"import { setAttr as _setAttr, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>")
const t1 = _template("<input>")
const t2 = _template("<textarea>")
const t3 = _template("<img>")
const t4 = _template("<video>")
const t5 = _template("<canvas>")
const t6 = _template("<source>")

export function render(_ctx) {
  const n0 = t0()
  const n1 = t1()
  const n2 = t2()
  const n3 = t3()
  const n4 = t4()
  const n5 = t5()
  const n6 = t6()
  _renderEffect(() => {
    const _width = _ctx.width
    const _height = _ctx.height
    _setAttr(n0, "spellcheck", _ctx.spellcheck)
    _setAttr(n0, "draggable", _ctx.draggable)
    _setAttr(n0, "translate", _ctx.translate)
    _setAttr(n0, "form", _ctx.form)
    _setAttr(n1, "list", _ctx.list)
    _setAttr(n2, "type", _ctx.type)
    _setAttr(n3, "width", _width)
    _setAttr(n3, "height", _height)
    _setAttr(n4, "width", _width)
    _setAttr(n4, "height", _height)
    _setAttr(n5, "width", _width)
    _setAttr(n5, "height", _height)
    _setAttr(n6, "width", _width)
    _setAttr(n6, "height", _height)
  })
  return [n0, n1, n2, n3, n4, n5, n6]
}"
`;

exports[`compiler v-bind > basic 1`] = `
"import { setPropBinding as _setPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setPropBinding(n0, "id", () => _ctx.id)
  return n0
}"
`;

exports[`compiler v-bind > class with v-bind object falls back to dynamic props 1`] = `
"import { setDynamicPropsBinding as _setDynamicPropsBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setDynamicPropsBinding(n0, () => [{ class: ["foo", { bar: _ctx.isBar }] }, _ctx.mayBeHasClass])
  return n0
}"
`;

exports[`compiler v-bind > className helper falls back when bit flags are exhausted 1`] = `
"import { setClassBinding as _setClassBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassBinding(n0, () => ({ c0: _ctx.a0, c1: _ctx.a1, c2: _ctx.a2, c3: _ctx.a3, c4: _ctx.a4, c5: _ctx.a5, c6: _ctx.a6, c7: _ctx.a7, c8: _ctx.a8, c9: _ctx.a9, c10: _ctx.a10, c11: _ctx.a11, c12: _ctx.a12, c13: _ctx.a13, c14: _ctx.a14, c15: _ctx.a15, c16: _ctx.a16, c17: _ctx.a17, c18: _ctx.a18, c19: _ctx.a19, c20: _ctx.a20, c21: _ctx.a21, c22: _ctx.a22, c23: _ctx.a23, c24: _ctx.a24, c25: _ctx.a25, c26: _ctx.a26, c27: _ctx.a27, c28: _ctx.a28, c29: _ctx.a29, c30: _ctx.a30, c31: _ctx.a31 }))
  return n0
}"
`;

exports[`compiler v-bind > className helper normalizes static and string class values 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.ok ? 1 : 0), " baz", "foo bar")
  return n0
}"
`;

exports[`compiler v-bind > computed object class key falls back to setClass 1`] = `
"import { setClassBinding as _setClassBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassBinding(n0, () => ({ [_ctx.name]: _ctx.active }))
  return n0
}"
`;

exports[`compiler v-bind > constant boolean class and style bindings are emitted in template 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div disabled class=active style=color:red;margin-top:4px;>", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler v-bind > constant false boolean bindings are omitted from template 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<button>", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler v-bind > constant folded class and style escape html entities 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div class=&amp;nbsp; style=--x:&amp;copy;>", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler v-bind > does not lower prop binding when expressions need declarations 1`] = `
"import { setProp as _setProp, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    const _foo = _ctx.foo
    _setProp(n0, "id", _foo + _foo)
  })
  return n0
}"
`;

exports[`compiler v-bind > dynamic arg 1`] = `
"import { setDynamicProps as _setDynamicProps, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    const _id = _ctx.id
    const _title = _ctx.title
    _setDynamicProps(n0, [{ [_id]: _id, [_title]: _title }])
  })
  return n0
}"
`;

exports[`compiler v-bind > dynamic arg w/ static attribute 1`] = `
"import { setDynamicProps as _setDynamicProps, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    const _id = _ctx.id
    _setDynamicProps(n0, [{ [_id]: _id, foo: "bar", checked: "" }])
  })
  return n0
}"
`;

exports[`compiler v-bind > multiple simple object className helper 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.ok ? 1 : 0) | (_ctx.bar ? 2 : 0), [" active", " foo"])
  return n0
}"
`;

exports[`compiler v-bind > no expression (shorthand) 1`] = `
"import { setAttrBinding as _setAttrBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setAttrBinding(n0, "camel-case", () => _ctx.camelCase)
  return n0
}"
`;

exports[`compiler v-bind > no expression 1`] = `
"import { setPropBinding as _setPropBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setPropBinding(n0, "id", () => _ctx.id)
  return n0
}"
`;

exports[`compiler v-bind > number value 1`] = `
"import { createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n0 = _createAssetComponent("Comp", { depth: () => (0) }, null, true)
  return n0
}"
`;

exports[`compiler v-bind > object class with multi-token key 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.isActive ? 1 : 0), "foo bar")
  return n0
}"
`;

exports[`compiler v-bind > pure static class stays in template without runtime setter 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div class=\\"foo bar\\">", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler v-bind > reverse ternary string className helper 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.selected === _ctx.row.id ? 0 : 1), "danger")
  return n0
}"
`;

exports[`compiler v-bind > should error if empty expression 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div arg>", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler v-bind > simple object className helper 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.isActive ? 1 : 0), "active")
  return n0
}"
`;

exports[`compiler v-bind > static class after conditional uses className helper with suffix 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.selected === _ctx.row.id ? 1 : 0), "danger", "", "foo")
  return n0
}"
`;

exports[`compiler v-bind > static class after multiple object className helper uses suffix 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.ok ? 1 : 0) | (_ctx.bar ? 2 : 0), [" active", " foo"], "", "tail")
  return n0
}"
`;

exports[`compiler v-bind > static class in reverse order uses className helper with suffix 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.isBar ? 1 : 0), "bar", "", "foo")
  return n0
}"
`;

exports[`compiler v-bind > static class with multiple object className helper 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.selected === _ctx.row.id ? 1 : 0) | (_ctx.active ? 2 : 0), [" danger", " is-active"], "foo")
  return n0
}"
`;

exports[`compiler v-bind > static class with overlapping multi-token object class 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.isActive ? 1 : 0), " foo bar", "foo")
  return n0
}"
`;

exports[`compiler v-bind > static class with overlapping object class 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.isBar ? 1 : 0), " bar", "bar")
  return n0
}"
`;

exports[`compiler v-bind > static class with simple object className helper 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.isBar ? 1 : 0), " bar", "foo")
  return n0
}"
`;

exports[`compiler v-bind > ternary string className helper 1`] = `
"import { setClassNameBinding as _setClassNameBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setClassNameBinding(n0, () => (_ctx.selected === _ctx.row.id ? 1 : 0), "danger")
  return n0
}"
`;

exports[`compiler v-bind > unsafe constant object style stays on runtime setter 1`] = `
"import { setStyle as _setStyle, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setStyle(n0, { '--x': 'a;b' })
  return n0
}"
`;

exports[`compiler v-bind > v-bind w/ svg elements 1`] = `
"import { setDynamicPropsBinding as _setDynamicPropsBinding, template as _template } from 'vue';
const t0 = _template("<svg>", 1, 1)

export function render(_ctx) {
  const n0 = t0()
  _setDynamicPropsBinding(n0, () => [_ctx.obj], true)
  return n0
}"
`;

exports[`compiler v-bind > with constant value 1`] = `
"import { setProp as _setProp, template as _template } from 'vue';
const t0 = _template("<div e=2 f=foo1 g=1 h=1>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _setProp(n0, "a", void 0)
  _setProp(n0, "b", 1 > 2)
  _setProp(n0, "c", 1 + 2)
  _setProp(n0, "d", 1 ? 2 : 3)
  _setProp(n0, "i", true)
  _setProp(n0, "j", null)
  _setProp(n0, "k", _ctx.x)
  _setProp(n0, "l", { foo: 1 })
  _setProp(n0, "m", { [_ctx.x]: 1 })
  _setProp(n0, "n", { ...{ foo: 1 } })
  _setProp(n0, "o", [1, , 3])
  _setProp(n0, "p", [1, ...[2, 3]])
  _setProp(n0, "q", [1, 2])
  _setProp(n0, "r", /\\s+/)
  return n0
}"
`;
